--- a/BingApplication/MainWindow.xaml
+++ b/BingApplication/MainWindow.xaml
@@ -4,8 +4,22 @@
         Title="Bing壁纸获取工具" Height="515" Width="720" Loaded="Window_Loaded" WindowStartupLocation="CenterScreen" Icon="1140395.ico" >
     <Grid >
         <StackPanel>
-            <TextBlock Margin="10,10,0,0">今天壁纸推荐：</TextBlock>
-            <Image Name="img" Height="400" Margin="10, 5, 10,10" ></Image>
+            <Menu>
+                <MenuItem Header="文件">
+                    <MenuItem Header="退出" Name="menuItemExit" Click="menuItemExit_Click"></MenuItem>
+                </MenuItem>
+                <MenuItem Header="选项">
+                    <MenuItem Header="设置" Name="menuItemSetup" Click="menuItemSetup_Click"></MenuItem>
+                </MenuItem>
+                <MenuItem Header="帮助">
+                    <MenuItem Header="关于" Name="menuItemAbout" Click="menuItemAbout_Click"></MenuItem>
+                </MenuItem>
+            </Menu>
+            <TextBlock Margin="10,10,0,0"><Run Text="今天"/><Run Text="bing"/><Run Text="壁纸推荐："/></TextBlock>
+            <Image Name="img" Height="365" Margin="10, 5, 10,0" ></Image>
+            <TextBlock Margin="10">
+                <Hyperlink Name="hyperlink" Click="hyperlink_Click">点击访问图片</Hyperlink>
+            </TextBlock>
             <Button Content="下载图片" Margin="0,0,0,10" HorizontalAlignment="Center"  VerticalAlignment="Top" Width="75" RenderTransformOrigin="-0.108,-0.949" Click="Button_Click"/>
         </StackPanel>
     </Grid>
