--- a/BingApplication/MainWindow.xaml
+++ b/BingApplication/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="BingApplication.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Bing壁纸获取工具" Height="515" Width="720" Loaded="Window_Loaded" WindowStartupLocation="CenterScreen" Icon="1140395.ico" >
+        Title="Bing壁纸获取工具" Height="515" Width="720" Loaded="Window_Loaded" WindowStartupLocation="CenterScreen" Icon="1140395.ico" ResizeMode="CanMinimize" >
     <Grid >
         <StackPanel>
             <Menu>
