--- a/BingApplication/SetupWindow.xaml
+++ b/BingApplication/SetupWindow.xaml
@@ -1,22 +1,22 @@
 ﻿<Window x:Class="BingApplication.SetupWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="设置" Height="300" Width="600" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" >
+        Title="设置" Height="260" Width="350" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" >
     <Grid>
-        <GroupBox Header="基本设置" HorizontalAlignment="Left" VerticalAlignment="Top" Height="245" Width="292" Margin="10,10,0,0">
-            <TextBlock Margin="10,10,10,10" TextWrapping="Wrap">
-                <Run>壁纸存储路径：</Run>
-                <LineBreak/>
-                <InlineUIContainer>
-                    <TextBox Width="190" Name="textPath" Margin="0,10,0,0" VerticalAlignment="Center" Height="20"></TextBox>
-                </InlineUIContainer>
-                <InlineUIContainer>
-                    <Button Name="selectPath" Click="selectPath_Click">选择路径</Button>
-                </InlineUIContainer>
-            </TextBlock>
-
-            
-        </GroupBox>
-
+        <StackPanel>
+            <GroupBox Header="基本设置" HorizontalAlignment="Left" VerticalAlignment="Top" Height="165" Width="320" Margin="10,10,0,0">
+                <TextBlock Margin="10,10,10,10" TextWrapping="Wrap">
+                    <Run>壁纸存储路径：</Run>
+                    <LineBreak/>
+                    <InlineUIContainer>
+                        <TextBox Width="190" Name="textPath" Margin="0,10,0,0" VerticalAlignment="Center" Height="20" MouseDoubleClick="textPath_MouseDoubleClick"></TextBox>
+                    </InlineUIContainer>
+                    <InlineUIContainer>
+                        <Button Name="selectPath" Click="selectPath_Click">选择路径</Button>
+                    </InlineUIContainer>
+                </TextBlock>
+            </GroupBox>
+            <TextBlock Margin="10">提示:壁纸默认保存在设置路径的bing目录下</TextBlock>
+        </StackPanel>
     </Grid>
 </Window>
