--- a/BingApplication/SetupWindow.xaml
+++ b/BingApplication/SetupWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="BingApplication.SetupWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="设置" Height="260" Width="350" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" >
+        Title="设置" Height="260" Width="350" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" ShowInTaskbar="False" >
     <Grid>
         <StackPanel>
             <GroupBox Header="基本设置" HorizontalAlignment="Left" VerticalAlignment="Top" Height="165" Width="320" Margin="10,10,0,0">
