--- a/BingApplication/MainWindow.xaml
+++ b/BingApplication/MainWindow.xaml
@@ -20,7 +20,9 @@
             <TextBlock Margin="10">
                 <Hyperlink Name="hyperlink" Click="hyperlink_Click">点击访问图片</Hyperlink>
             </TextBlock>
-            <Button Content="下载图片" Margin="0,0,0,10" HorizontalAlignment="Center"  VerticalAlignment="Top" Width="75" RenderTransformOrigin="-0.108,-0.949" Click="Button_Click"/>
+            <TextBlock Margin="10" Name="message">
+                
+            </TextBlock>
         </StackPanel>
     </Grid>
 </Window>
