--- a/BingApplication/SetupWindow.xaml
+++ b/BingApplication/SetupWindow.xaml
@@ -14,6 +14,8 @@
                     <InlineUIContainer>
                         <Button Name="selectPath" Click="selectPath_Click">选择路径</Button>
                     </InlineUIContainer>
+                    <LineBreak/>
+                    <CheckBox Margin="0 10" Name="chkWall" Click="chkWall_Click">自动将今天的壁纸设置成桌面背景</CheckBox>
                 </TextBlock>
             </GroupBox>
             <TextBlock Margin="10">提示:壁纸默认保存在设置路径的bing目录下</TextBlock>
