--- a/BingApplication/MainWindow.xaml
+++ b/BingApplication/MainWindow.xaml
@@ -1,28 +1,31 @@
 ﻿<Window x:Class="BingApplication.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Bing壁纸获取工具" Height="515" Width="720" Loaded="Window_Loaded" WindowStartupLocation="CenterScreen" Icon="1140395.ico" ResizeMode="CanMinimize" >
+        Title="Bing壁纸获取工具" Height="400" Width="580" Loaded="Window_Loaded" WindowStartupLocation="CenterScreen" Icon="1140395.ico" >
     <Grid >
-        <StackPanel>
-            <Menu>
-                <MenuItem Header="文件">
-                    <MenuItem Header="退出" Name="menuItemExit" Click="menuItemExit_Click"></MenuItem>
-                </MenuItem>
-                <MenuItem Header="选项">
-                    <MenuItem Header="设置" Name="menuItemSetup" Click="menuItemSetup_Click"></MenuItem>
-                </MenuItem>
-                <MenuItem Header="帮助">
-                    <MenuItem Header="关于" Name="menuItemAbout" Click="menuItemAbout_Click"></MenuItem>
-                </MenuItem>
-            </Menu>
-            <TextBlock Margin="10,10,0,0"><Run Text="今天"/><Run Text="bing"/><Run Text="壁纸推荐："/></TextBlock>
-            <Image Name="img" Height="365" Margin="10, 5, 10,0" ></Image>
-            <TextBlock Margin="10">
-                <Hyperlink Name="hyperlink" Click="hyperlink_Click">点击访问图片</Hyperlink>
-            </TextBlock>
-            <TextBlock Margin="10" Name="message">
-                
-            </TextBlock>
-        </StackPanel>
+        <DockPanel LastChildFill="True">
+            <StatusBar DockPanel.Dock="Bottom" Height="25">
+                <TextBlock>
+                        <Hyperlink Name="hyperlink" Click="hyperlink_Click">点击访问图片</Hyperlink>
+                </TextBlock>
+            </StatusBar>
+            <DockPanel DockPanel.Dock="Top">
+                <Menu DockPanel.Dock="Top">
+                    <MenuItem Header="文件">
+                        <MenuItem Header="退出" Name="menuItemExit" Click="menuItemExit_Click"></MenuItem>
+                    </MenuItem>
+                    <MenuItem Header="选项">
+                        <MenuItem Header="设置" Name="menuItemSetup" Click="menuItemSetup_Click"></MenuItem>
+                    </MenuItem>
+                    <MenuItem Header="帮助">
+                        <MenuItem Header="关于" Name="menuItemAbout" Click="menuItemAbout_Click"></MenuItem>
+                    </MenuItem>
+                </Menu>
+                <StackPanel DockPanel.Dock="Bottom" Margin="5">
+                    <TextBlock ><Run Text="今天"/><Run Text="bing"/><Run Text="壁纸推荐："/></TextBlock>
+                    <Image Name="img" Stretch="UniformToFill"></Image>
+                </StackPanel>
+            </DockPanel>
+        </DockPanel>
     </Grid>
 </Window>
