--- a/BingApplication/MainWindow.xaml
+++ b/BingApplication/MainWindow.xaml
@@ -12,6 +12,8 @@
             <DockPanel DockPanel.Dock="Top">
                 <Menu DockPanel.Dock="Top">
                     <MenuItem Header="文件">
+                        <MenuItem Header="打开图片目录" Name="menuItemOpenImage" Click="menuItemOpenImage_Click"></MenuItem>
+                        <Separator/>
                         <MenuItem Header="退出" Name="menuItemExit" Click="menuItemExit_Click"></MenuItem>
                     </MenuItem>
                     <MenuItem Header="选项">
