加入开机自启功能

--- a/BingApplication/SetupWindow.xaml
+++ b/BingApplication/SetupWindow.xaml
@@ -1,24 +1,21 @@
 ﻿<Window x:Class="BingApplication.SetupWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="设置" Height="260" Width="350" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" ShowInTaskbar="False" Closing="Window_Closing" >
+        Title="设置" Height="200" Width="350" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" ShowInTaskbar="False" Closing="Window_Closing" Icon="1140395.ico" >
     <Grid>
-        <StackPanel>
-            <GroupBox Header="基本设置" HorizontalAlignment="Left" VerticalAlignment="Top" Height="165" Width="320" Margin="10,10,0,0">
-                <TextBlock Margin="10,10,10,10" TextWrapping="Wrap">
-                    <Run>壁纸存储路径：</Run>
-                    <LineBreak/>
-                    <InlineUIContainer>
-                        <TextBox Width="190" Name="textPath" Margin="0,10,0,0" VerticalAlignment="Center" Height="20" MouseDoubleClick="textPath_MouseDoubleClick"></TextBox>
-                    </InlineUIContainer>
-                    <InlineUIContainer>
+        <DockPanel>
+            <TextBlock DockPanel.Dock="Bottom" Margin="10 2">提示：壁纸默认保存在程序所在路径的bing目录</TextBlock>
+            <GroupBox Header="基本设置" HorizontalAlignment="Left" VerticalAlignment="Top" Height="Auto" Width="315" Margin="10">
+                <StackPanel>
+                    <TextBlock Margin="4 4 4 0">壁纸存储路径：</TextBlock>
+                    <StackPanel Margin="4" Orientation="Horizontal">
+                        <TextBox Width="240" Name="textPath" VerticalAlignment="Center" MouseDoubleClick="textPath_MouseDoubleClick"></TextBox>
                         <Button Name="selectPath" Click="selectPath_Click">选择路径</Button>
-                    </InlineUIContainer>
-                    <LineBreak/>
-                    <CheckBox Margin="0 10" Name="chkWall">自动将今天的壁纸设置成桌面背景</CheckBox>
-                </TextBlock>
+                    </StackPanel>
+                    <CheckBox Margin="4" Name="chkWall">自动将当天的壁纸设置成桌面背景</CheckBox>
+                    <CheckBox Margin="4" Name="chkAutoStart">随Windows登录自动启动</CheckBox>
+                </StackPanel>
             </GroupBox>
-            <TextBlock Margin="10">提示:壁纸默认保存在程序所在路径的bing目录</TextBlock>
-        </StackPanel>
+        </DockPanel>
     </Grid>
 </Window>
