--- a/BingApplication/MainWindow.xaml
+++ b/BingApplication/MainWindow.xaml
@@ -13,7 +13,7 @@
                 <Menu DockPanel.Dock="Top">
                     <MenuItem Header="文件">
                         <MenuItem Header="打开图片目录" Name="menuItemOpenImage" Click="menuItemOpenImage_Click"></MenuItem>
-                        <Separator/>
+                        <MenuItem Header="图片另存为" Name="menuItemSave" Click="menuItemSave_Click"></MenuItem>                        <Separator/>
                         <MenuItem Header="退出" Name="menuItemExit" Click="menuItemExit_Click"></MenuItem>
                     </MenuItem>
                     <MenuItem Header="选项">
@@ -25,7 +25,14 @@
                 </Menu>
                 <StackPanel DockPanel.Dock="Bottom" Margin="5">
                     <TextBlock ><Run Text="今天"/><Run Text="bing"/><Run Text="壁纸推荐："/></TextBlock>
-                    <Image Name="img" Stretch="UniformToFill"></Image>
+                    <Image Name="img" Stretch="UniformToFill">
+                        <Image.ContextMenu>
+                            <ContextMenu>
+                                <MenuItem Header="打开图片目录" Click="menuItemOpenImage_Click"></MenuItem>
+                                <MenuItem Header="图片另存为" Click="menuItemSave_Click"></MenuItem>
+                            </ContextMenu>
+                        </Image.ContextMenu>
+                    </Image>
                 </StackPanel>
             </DockPanel>
         </DockPanel>
