加入是否自动下载壁纸到本地选项

--- a/BingApplication/SetupWindow.xaml
+++ b/BingApplication/SetupWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="BingApplication.SetupWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="设置" Height="200" Width="350" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" ShowInTaskbar="False" Closing="Window_Closing" Icon="1140395.ico" >
+        Title="设置" Height="220" Width="350" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" ShowInTaskbar="False" Closing="Window_Closing" Icon="1140395.ico" >
     <Grid>
         <DockPanel>
             <TextBlock DockPanel.Dock="Bottom" Margin="10 2">提示：壁纸默认保存在程序所在路径的bing目录</TextBlock>
@@ -12,6 +12,7 @@
                         <TextBox Width="240" Name="textPath" VerticalAlignment="Center" MouseDoubleClick="textPath_MouseDoubleClick"></TextBox>
                         <Button Name="selectPath" Click="selectPath_Click">选择路径</Button>
                     </StackPanel>
+                    <CheckBox Margin="4" Name="chkSave">保存当天壁纸到本地</CheckBox>
                     <CheckBox Margin="4" Name="chkWall">自动将当天的壁纸设置成桌面背景</CheckBox>
                     <CheckBox Margin="4" Name="chkAutoStart">随Windows登录自动启动</CheckBox>
                 </StackPanel>
