完善保存到本地及自动设壁纸功能

--- a/BingApplication/SetupWindow.xaml
+++ b/BingApplication/SetupWindow.xaml
@@ -13,7 +13,7 @@
                         <Button Name="selectPath" Click="selectPath_Click">选择路径</Button>
                     </StackPanel>
                     <CheckBox Margin="4" Name="chkSave">保存当天壁纸到本地</CheckBox>
-                    <CheckBox Margin="4" Name="chkWall">自动将当天的壁纸设置成桌面背景</CheckBox>
+                    <CheckBox Margin="4" Name="chkWall" Click="chkWall_Click">自动将当天的壁纸设置成桌面背景</CheckBox>
                     <CheckBox Margin="4" Name="chkAutoStart">随Windows登录自动启动</CheckBox>
                 </StackPanel>
             </GroupBox>
