--- a/BingApplication/MainWindow.xaml
+++ b/BingApplication/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="BingApplication.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="每日Bing壁纸v0.1.2" Height="400" Width="580" Loaded="Window_Loaded" WindowStartupLocation="CenterScreen" Icon="app.ico" Closing="Window_Closing">
+        Title="" Height="400" Width="580" Loaded="Window_Loaded" WindowStartupLocation="CenterScreen" Icon="app.ico" Closing="Window_Closing">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="20"></RowDefinition>
