--- a/BingApplication/SetupWindow.xaml
+++ b/BingApplication/SetupWindow.xaml
@@ -1,22 +1,63 @@
 ﻿<Window x:Class="BingApplication.SetupWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="设置" Height="220" Width="350" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" ShowInTaskbar="False" Closing="Window_Closing" Icon="app.ico" >
+        Title="设置" Height="300" Width="450" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" ShowInTaskbar="False" Closing="Window_Closing" Icon="app.ico" >
+    <Window.Resources>
+        <Style TargetType="Grid">
+            <Setter Property="Margin" Value="10"/>
+        </Style>
+    </Window.Resources>
     <Grid>
-        <DockPanel>
-            <TextBlock DockPanel.Dock="Bottom" Margin="10 2">提示：壁纸默认保存在程序所在路径的bing目录</TextBlock>
-            <GroupBox Header="基本设置" HorizontalAlignment="Left" VerticalAlignment="Top" Height="Auto" Width="315" Margin="10">
-                <StackPanel>
-                    <TextBlock Margin="4 4 4 0">壁纸存储路径：</TextBlock>
-                    <StackPanel Margin="4" Orientation="Horizontal">
-                        <TextBox Width="240" Name="textPath" VerticalAlignment="Center" MouseDoubleClick="textPath_MouseDoubleClick"></TextBox>
-                        <Button Name="selectPath" Click="selectPath_Click">选择路径</Button>
-                    </StackPanel>
-                    <CheckBox Margin="4" Name="chkSave">保存当天壁纸到本地</CheckBox>
-                    <CheckBox Margin="4" Name="chkWall" Click="chkWall_Click">自动将当天的壁纸设置成桌面背景</CheckBox>
+        <StackPanel>
+            <GroupBox Header="基本">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition></RowDefinition>
+                        <RowDefinition Height="7"></RowDefinition>
+                        <RowDefinition></RowDefinition>
+                        <RowDefinition Height="7"></RowDefinition>
+                        <RowDefinition></RowDefinition>
+                        <RowDefinition Height="7"></RowDefinition>
+                        <RowDefinition></RowDefinition>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"></ColumnDefinition>
+                        <ColumnDefinition Width="60"></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock  Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2">壁纸存储路径：</TextBlock>
+                    <TextBox    Grid.Row="2" Grid.Column="0" Width="Auto" Name="textPath" MouseDoubleClick="textPath_MouseDoubleClick"></TextBox>
+                    <Button     Grid.Row="2" Grid.Column="1" Name="selectPath" Click="selectPath_Click">选择路径</Button>
+                    <CheckBox   Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Name="chkSave">保存当天壁纸到本地</CheckBox>
+                    <CheckBox   Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2" Name="chkWall" Click="chkWall_Click">自动将当天的壁纸设置成桌面背景</CheckBox>
                     <!--<CheckBox Margin="4" Name="chkAutoStart">随Windows登录自动启动</CheckBox>-->
-                </StackPanel>
+                </Grid>
             </GroupBox>
-        </DockPanel>
+            <GroupBox Header="高级" Height="Auto">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition></RowDefinition>
+                        <RowDefinition Height="7"></RowDefinition>
+                        <RowDefinition></RowDefinition>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                    </Grid.ColumnDefinitions>
+                    <CheckBox Grid.Row="0" Grid.Column="0" Name="autoChange">开启自动更换壁纸</CheckBox>
+                    <StackPanel Grid.Row="2" Orientation="Horizontal">
+                        <TextBlock Grid.Row="2" Grid.Column="2">
+                        更换时间间隔：
+                        </TextBlock>
+                        <ComboBox>
+                            <ComboBoxItem IsSelected="True">
+                                1分钟
+                            </ComboBoxItem>
+                            <ComboBoxItem>
+                                2分钟
+                            </ComboBoxItem>
+                        </ComboBox>
+                    </StackPanel>
+                </Grid>
+            </GroupBox>
+            <TextBlock Margin="0 5 0 0">提示：壁纸默认保存在程序所在路径的bing目录</TextBlock>
+        </StackPanel>
     </Grid>
 </Window>
