--- a/BingApplication/SetupWindow.xaml
+++ b/BingApplication/SetupWindow.xaml
@@ -4,7 +4,6 @@
         xmlns:local="clr-namespace:BingApplication"
         Title="设置" Height="300" Width="450" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" ShowInTaskbar="False" Closing="Window_Closing" Icon="app.ico" >
     <Window.Resources>
-        <local:BindDataProvider x:Key="data"/>
         <Style TargetType="Grid">
             <Setter Property="Margin" Value="10"/>
         </Style>
@@ -44,7 +43,7 @@
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
                     </Grid.ColumnDefinitions>
-                    <CheckBox Grid.Row="0" Grid.Column="0" Name="autoChange"  IsChecked="{Binding Source={StaticResource data}, Path=AutoChanged}">开启自动更换壁纸</CheckBox>
+                    <CheckBox Grid.Row="0" Grid.Column="0" Name="autoChange" >开启自动更换壁纸</CheckBox>
                     <StackPanel Grid.Row="2" Orientation="Horizontal" Name="intervalPanel" Visibility="{Binding ElementName=autoChange,Path=IsChecked,Converter={StaticResource b2v}, Mode=OneWay}">
                         <TextBlock Grid.Row="2" Grid.Column="2">更换时间间隔：</TextBlock>
                         <ComboBox Name="combobox"></ComboBox>
