--- a/BingApplication/UpdateInfoWindow.xaml
+++ b/BingApplication/UpdateInfoWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="BingApplication.UpdateInfoWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="更新信息" MinHeight="150" MinWidth="350" Icon="app.ico" SizeToContent="WidthAndHeight" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
+        Title="更新信息" MinHeight="150" MinWidth="350" KeyDown="Window_KeyDown" Icon="app.ico" SizeToContent="WidthAndHeight" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
     <Window.Resources>
         <Style TargetType="TextBlock">
             <Setter Property="TextBlock.VerticalAlignment" Value="Bottom"/>
